feat: update get transactions api business logic (#361)
